2001-08-27  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4 (AC_CONFIG_COMMANDS)
	(AC_CONFIG_COMMANDS_POST, AC_CONFIG_COMMANDS_PRE, AC_CONFIG_FILES)
	(AC_CONFIG_HEADER, AC_CONFIG_HEADERS, AC_CONFIG_IF_MEMBER)
	(AC_CONFIG_LINKS, AC_CONFIG_SUBDIRS, AC_FILE_DEPENDENCY_TRACE)
	(AC_LINK_FILES, AC_LIST_COMMANDS, AC_LIST_COMMANDS_COMMANDS)
	(AC_LIST_FILES, AC_LIST_FILES_COMMANDS, AC_LIST_HEADERS)
	(AC_LIST_HEADERS_COMMANDS, AC_LIST_LINKS, AC_LIST_LINKS_COMMANDS)
	(AC_OUTPUT, AC_OUTPUT_COMMANDS, AC_OUTPUT_COMMANDS_POST)
	(AC_OUTPUT_COMMANDS_PRE, AC_OUTPUT_MAKE_DEFS)
	(_AC_CONFIG_COMMANDS_INIT, _AC_CONFIG_DEPENDENCIES)
	(_AC_CONFIG_DEPENDENCY, _AC_CONFIG_UNIQUE, _AC_LINK_FILES_CNT)
	(_AC_LIST_SUBDIRS, _AC_OUTPUT_COMMANDS, _AC_OUTPUT_COMMANDS_CNT)
	(_AC_OUTPUT_COMMANDS_INIT, _AC_OUTPUT_CONFIG_STATUS)
	(_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS, _AC_OUTPUT_LINKS)
	(_AC_OUTPUT_SUBDIRS): Move to...
	* lib/autoconf/status.m4: this new file.
	* lib/autoconf/general.m4, lib/autoconf/Makefile.am: Adjust.
	* tests/Makefile.am, tests/suite.at: Adjust.

2001-08-27  Akim Demaille  <akim@epita.fr>

	Automake 1.5.

	* Makefile.am (AUTOMAKE_OPTIONS): Add 1.5 and dist-bzip2.
	(AMTAR): Help automake define it.
	(INSTALL, install-data-hook): The INSTALL.txt trick is no longer
	needed, 1.5 can have a macro and a target with the same name.
	* m4/auxdir.m4, m4/cond.m4, m4/depend.m4, m4/install-sh.m4,
	* m4/strip.m4: New.
	* m4/init.m4, m4/sanity.m4: Update.
	* doc/Makefile.am (CLEANFILES): 1.5 knows the texi2dvi files.
	* lib/autoconf/Makefile.am, lib/autotest/Makefile.am,
	* lib/m4sugar/Makefile.am, lib/autoscan/Makefile.am,
	* lib/Autom4te/Makefile.am, man/Makefile.am: Use dist/nodist.

2001-08-27  Akim Demaille  <akim@epita.fr>

	Provide a mean to ``AC_PREREQ'' for M4sugar, M4sh and Autotest.

	* lib/autoconf/version.in: Remove.
	* lib/m4sugar/version.in: New.
	* lib/m4sugar/m4sugar.m4 (m4_acversion, m4_version_prereq): New.
	Adjust callers.